Institution theme (mobile): Fix for bleeding white backround on home page on  some mobile platforms apparently due to added homeFacets functionality a few days earlier.

--- a/web/interface/themes/institution/css/home.css
+++ b/web/interface/themes/institution/css/home.css
@@ -12,6 +12,10 @@
     border-bottom: 1px solid #ddd;
 }
 
+.main-home {              // Fix for bleeding white background on some mobile
+    overflow-x: hidden;   // platforms apparently due to homeFacers.
+}
+
 /*** Logo ***/
 
 .searchHomeLogo {
